--- a/1-10.css
+++ b/1-10.css
@@ -24,10 +24,6 @@ main {
   position: relative;
 }
 
-.main-content:nth(3) {
-  margin-right: 0;
-}
-
 .step-number {
   color: white;
   display: inline-block;
@@ -52,4 +48,34 @@ footer {
   width: 100%;
   height: 50px;
   background-color: #AAAAAA;
+}
+
+@media screen and (max-width:768px) {
+  header {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .main-content {
+    width: 90%;
+    margin: 0 auto 20px auto;
+  }
+  
+  .main-content:nth-child(3) {
+    margin-bottom: 0;
+  }
+  
+  .img {
+    width: 100%;
+  }
+  
+  footer {
+    margin-top: 50px;
+  }
+  
 }
